# frisbee

./: Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: cargo-publish.yml
src/: main.rs
