[package]
name = "frisbee"
version = "0.3.0"
authors = ["Nathan Files <nathanwfiles@gmail.com>"]
edition = "2021"
repository = "https://github.com/nfiles/frisbee"
keywords = ["dev", "web", "server", "filesystem"]
categories = ["command-line-utilities", "web-programming", "web-programming::http-server"]
license = "MIT"
description = "simple tool for serving files from disk"

[dependencies]
rocket = "0.5.0-rc.2"
clap = { version = "^3.2", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
